# generalize-refusal-76f7-gemini

./: .resource_finder_complete  README.md  REPORT.md  download_datasets.py  download_datasets_v2.py  download_datasets_v3.py  download_papers.py  filter_papers.py  find_arxiv.py  literature_review.md  papers_filtered.json  papers_raw.json  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  alpaca_samples.json  beaver_tails_samples.json  xstest_samples.json
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2405.20947v5_OR-Bench:_An_Over-Refusal_Benchmark_for_Large_Lang_manifest.txt  2507.04250v1_Just_Enough_Shifts:_Mitigating_Over-Refusal_in_Ali_manifest.txt
results/: baseline_eval.json  finetuned_eval.json  finetuned_eval_3epochs.json  train_set_eval_3epochs.json
results/finetuned_model/: README.md
results/finetuned_model/checkpoint-10/: adapter_config.json  trainer_state.json
results/finetuned_model/checkpoint-20/: trainer_state.json
results/finetuned_model/checkpoint-6/: adapter_config.json  trainer_state.json
src/: eval.py  eval_train.py  prepare_data.py  train.py
