[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "pypdf",
    "requests",
    "arxiv",
    "datasets",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "transformers",
    "sentencepiece",
    "accelerate",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.2",
    "trl>=1.1.0",
    "tqdm>=4.67.3",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true
